 - SPARQL Query Parser now parses correctly if first item in the WHERE clause is a nested graph pattern
 - Non-Leviathan Query Processors record the time the Query took to execute
 - Some bug fixes around LiteralNode value comparisons regarding equivalences between .Net types and XML Schema types
- General Improvements
 - Internal restructuring of how MIME Types are managed
  - Allows for new MIME Types, File Extensions and parsers to be registered with the API and used automatically where appropriate
 - Can use dotnetrdf:default-graph as a URI to explicitly access the default unnamed graph in a SPARQL dataset
- Parsing
 - Notation 3 Parser supports Variables, @forSome and @forAll fully
 - All Parsers should now throw RdfParseExceptions when null Graphs, Stores, filenames, streams etc are passed as arguments
 - SparqlRdfParser can now be created to use a specific RDF Parser rather than just auto-detection
 - UriLoader Caching improved
  - URIs are santised when being cached
  - Data is cached under both the request and response URIS
  - Extracted existing private implementation into an interface so users can choose to slot in alternative caching mechanisms if desired
 - Parsers all open files with the appropriate encoding where possible
  - Streams in the wrong encoded will cause parsers to issue a warning
 - Added Warning events to ISparqlResultsReader, ISparqlResultsWriter, SparqlQueryParser and SparqlUpdateParser
- Query Improvements
 - Leviathan SPARQL engine now operates over an ISparqlDataset which is an abstraction between the data and the
   SPARQL engine which allows for out of memory datasets to be queried and updated with Leviathan
 - Reverse Translation from ISparqlAlgebra to SparqlQuery
 - Optimisation for queries using ORDER BY under some circumstances
 - Improved SparqlParameterizedString
  - Can now set values for Variables which are substituted into the query when you call ToString()