@@ -599,8 +599,15 @@ namespace VDS.RDF.Parsing.Tokens
                 }
 
                 //Return the Language Specifier
-                this.LastTokenType = Token.LANGSPEC;
-                return new LanguageSpecifierToken(this.Value, this.CurrentLine, this.StartPosition, this.EndPosition);
+                if (RdfSpecsHelper.IsValidLangSpecifier(this.Value))
+                {
+                    this.LastTokenType = Token.LANGSPEC;
+                    return new LanguageSpecifierToken(this.Value, this.CurrentLine, this.StartPosition, this.EndPosition);
+                }
+                else
+                {
+                    throw Error("Unexpected Content '" + this.Value + "' encountered, expected a valid Language Specifier");
+                }
             }
             else if (this.LastTokenType == Token.PLAINLITERAL)
             {
