@@ -1667,7 +1667,16 @@ namespace VDS.RDF.Parsing.Tokens
                     next = this.Peek();
                 }
 
-                return new LanguageSpecifierToken(this.Value, this.CurrentLine, this.StartPosition, this.EndPosition);
+                //Return the Language Specifier after validation
+                if (RdfSpecsHelper.IsValidLangSpecifier(this.Value))
+                {
+                    this.LastTokenType = Token.LANGSPEC;
+                    return new LanguageSpecifierToken(this.Value, this.CurrentLine, this.StartPosition, this.EndPosition);
+                }
+                else
+                {
+                    throw Error("Unexpected Content '" + this.Value + "' encountered, expected a valid Language Specifier");
+                }
             }
             else
             {
